<resources>
    <string name="app_name">RBL CONTACT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">ICT OPERATIONS DIVISION</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_browse">Browse</string>
    <string name="menu_prl">On PRL/Retired</string>
    <!--<string name="menu_signin">SignIN</string>-->
    <string name="menu_signin">SignIN</string>
    <string name="menu_pass">Change Password</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>
    <string name="button_call">CALL</string>
    <string name="change_password">Change Password</string>
    <string name="password">Password</string>
    <string name="reg_no">Registration No   :</string>
    <string name="file_no">File No   :</string>
    <string name="employee_name">Employee Name   :</string>
    <string name="employee_name_bangla">Employee Name (Bangla)   :</string>
    <string name="designation">Designation   :</string>
    <string name="place_of_posting">Place Of Posting   :</string>
    <string name="mobile_number">Mobile Number   :</string>
    <string name="email">Email   :</string>
    <string name="wrong_email_password"> Worng Registration Number Or Password</string>
    <string name="office_email">Office Email   :</string>
    <string name="office_phone">Office Phone   :</string>
    <string name="button_message">Message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Search fragment</string>
    <string name="sign_in_tv">Rupali Bank Limited</string>
    <string name="loading">Loading…</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="menu_notices">Notices</string>
    <string name="give_correct_information">Please give Correct Information</string>
    <string name="success_in_signin">Successfully SignIn</string>
    <string name="sunable_to_connect">Error in Network Connection</string>
    <string name="login">Login</string>
    <string name="change_pass">Your Password has been Changed Successfully</string>
    <string name="forgot_password">Forgot Password</string>
</resources>
