<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.signin.SignInActivity"
    tools:showIn="@layout/activity_sign_in">

    <RelativeLayout
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <!-- Login progress -->

        <TextView
            android:id="@+id/text_tv"
            android:layout_width="410dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:paddingLeft="40dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

        <ScrollView
            android:layout_below="@+id/text_tv"
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:src="@drawable/rupali_bank"/>
                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <FrameLayout
                        android:orientation="vertical"
                        android:layout_marginTop="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2">

                        <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/scrollView2" >
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">
                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:textColorHint="#d4d0d0"
                                    android:layout_height="wrap_content">

                                    <AutoCompleteTextView
                                        android:id="@+id/signinUserEmail"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:clickable="true"
                                        android:drawableLeft="@drawable/ic_email_24px"
                                        android:drawablePadding="8dp"
                                        android:focusableInTouchMode="true"
                                        android:hint="Registration No"
                                        android:imeOptions="actionNext"
                                        android:inputType="textEmailAddress"
                                        android:maxLines="1"
                                        android:singleLine="true"
                                        android:textColor="@color/text_black"
                                        android:textColorHint="@color/colorAccent"
                                        android:textSize="15sp"
                                        android:theme="@style/EditScreenTextInputLayoutStyle" />

                                </com.google.android.material.textfield.TextInputLayout>
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">
                                    <com.google.android.material.textfield.TextInputLayout
                                        android:layout_width="match_parent"
                                        android:textColorHint="#d4d0d0"
                                        android:layout_height="wrap_content">
                                        <EditText
                                            android:id="@+id/signInUserPassword"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:textSize="16sp"
                                            android:hint="@string/password"
                                            android:theme="@style/EditScreenTextInputLayoutStyle"
                                            android:imeActionId="@+id/login"
                                            android:imeActionLabel="@string/action_sign_in_short"
                                            android:imeOptions="actionNext"
                                            android:inputType="textPassword"
                                            android:textColor="@color/text_black"
                                            android:textColorHint="@color/colorAccent"
                                            android:maxLines="1"
                                            android:maxLength="20"
                                            android:drawablePadding="8dp"
                                            android:drawableLeft="@drawable/ic_lock_24px"
                                            android:singleLine="true" />
                                    </com.google.android.material.textfield.TextInputLayout>
                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:adjustViewBounds="true"
                                        android:layout_marginLeft="-20dp"
                                        android:layout_marginTop="20dp"
                                        android:id="@+id/visibleBtn"
                                        android:src="@drawable/ic_visibility_24px"/>
                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:adjustViewBounds="true"
                                        android:layout_marginLeft="-20dp"
                                        android:layout_marginTop="20dp"
                                        android:id="@+id/visibleBtn2"
                                        android:visibility="invisible"
                                        android:src="@drawable/ic_visibility_off_24px"/>
                                </LinearLayout>
                            </LinearLayout>

                        </ScrollView>
                    </FrameLayout>

                    <Button
                        android:id="@+id/email_sign_in_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="Login"
                        android:textColor="#ffff"
                        android:background="@color/colorRed"
                        style="@style/Widget.AppCompat.Button.Colored" />

                    <TextView
                        android:id="@+id/forgotPassword"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:paddingLeft="8dp"
                        android:text="Forget Password?"
                        android:linksClickable="true"
                        android:textStyle="bold|italic" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>